--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Raul Elizalde Ibarra",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.4.1"
   }
 }
